# Dom3D_Pro

./: .gitattributes  .gitignore  CMakeLists.txt  Dom3D_Pro.sln  Mesh_1.d3dm  README.md  VISUAL_STUDIO.md  curve_project.d3dm  curve_project_1.d3dm
src/: CAlfaDoc.cpp  CAlfaDoc.h  CAlfaObject.cpp  CAlfaObject.h  CMesh3D.cpp  CMesh3D.h  CPolyline.cpp  CPolyline.h  CSizeBlock.cpp  CView2d.cpp  CView2d.h  CView3d.cpp  CView3d.h  Common.h  Dom3DApp.cpp  Dom3DApp.h  Dom3DProjectSerializer.cpp  Dom3DProjectSerializer.h  Material.cpp  Material.h  ObjIO.cpp  ObjIO.h  OpenGLCompat.h  Plane.cpp  Plane.h  Point3d.cpp  Point3d.h  ProjectIO.cpp  ProjectIO.h  Renderer.cpp  Renderer.h  SizeBlock.h  StepIO.cpp  StepIO.h  SystemCoord.cpp  SystemCoord.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  (+5 more)
src/iges/: AstraNurbs.cpp  AstraNurbsSurface.cpp  AstraSurface.cpp  AstraSurface2.cpp  AstraSurface3.cpp  AstraSurface4.cpp  AstraVect.cpp  AstraVect.h  Astra_spl.cpp  SplineCurve.cpp  SplineCurve.h  defines.cpp  defines.h
src/resources/: icons.qrc
src/solid/: Solid.cpp  Solid.h  SolidBoxTool.cpp  SolidBoxTool.h  SolidTool.cpp  SolidTool.h  SurfaceFace.cpp  SurfaceFace.h
src/ui/: MainWindow.cpp  MainWindow.h  OpenGLViewport.cpp  OpenGLViewport.h  PreferencesDialog.cpp  PreferencesDialog.h  PropertyPanel.cpp  PropertyPanel.h  QtSceneRenderer.cpp  QtSceneRenderer.h  ToolRegistry.cpp  ToolRegistry.h
